# active_contraction

./: CMakeLists.txt  README.rst
src/fortran/: CMakeLists.txt  active_contraction.F90  visualise.cmgui
src/fortran/expected_results/results/: ActiveContraction.part0.exelem  ActiveContraction.part0.exnode
